--- a/less/navBar.less
+++ b/less/navBar.less
@@ -54,7 +54,7 @@ li {
   display: none;
 }
 
-@media (@phone) {
+@media (@tablet) {
   .navbar {
     ul {
       width: 100%;
@@ -79,7 +79,7 @@ li {
 
   li {
     border-bottom: 1px solid @lightColour;
-    color: purple;
+    color: black;
     display: block;
     font-size: 1.5rem;
     padding: 2rem 0;
@@ -127,7 +127,7 @@ li {
     color: @lightColour;
     background-color: @darkColour;
   }
-  @media (@phone) {
+  @media (@tablet) {
     display: initial;
     background-color: initial;
     color: black;
@@ -140,7 +140,7 @@ li {
   }
 }
 .logInListItem {
-    @media(@phone){
+    @media(@tablet){
         padding: 3.5rem 0;
     }
 }
